# LendSafe

./: .gitignore  CLAUDE.md  COLAB_FIX.md  COLAB_INSTRUCTIONS.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  GITHUB_DEPLOY_INSTRUCTIONS.md  GITHUB_SUCCESS.md  INTEGRATION_SUCCESS.md  LendSafe_Finetune_Colab.ipynb  MODEL_INTEGRATION_COMPLETE.md  QUICK_START.md  README.md  README_GRADIO.md  README_HF.md  STREAMLIT_DEPLOYMENT.md  STREAMLIT_QUICKSTART.md  STYLING_FIX.md  USAGE_GUIDE.md  WEEK1_SUMMARY.md  WEEK2_COMPLETE.md  WEEK2_PROGRESS.md  app.py  app_gradio.py  finetune_log.txt  pyproject.toml  requirements.txt
data/synthetic/: training_examples.csv  training_examples.json
models/granite-finetuned/: README.md  adapter_config.json
models/risk_model/: feature_importance.csv  metrics.csv
scripts/: download_model.py  evaluate_model.py  finetune_granite.py  generate_synthetic_explanations.py  monitor_training.py  process_lending_data.py  test_integration.py  train_risk_model.py  validate_model.py
src/: llm_explainer.py
validation_results/: validation_20251112_145952.json
