[project]
name = "lendsafe"
version = "0.1.0"
description = "Local AI-powered loan decision explainer with regulatory compliance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Atharva Deshmukh", email = "your.email@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.29.0",
    "reportlab>=4.0.0",
    "pypdf2>=3.0.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
